Update PrebuildDomain definition
