# .NET/LUIS-Programmatic/Generated/Models/PrebuiltDomainModel.cs
@@ -1,58 +1,0 @@
-// <auto-generated>
-// Copyright (c) Microsoft Corporation. All rights reserved.
-// Licensed under the MIT License. See License.txt in the project root for
-// license information.
-//
-// Code generated by Microsoft (R) AutoRest Code Generator.
-// Changes may cause incorrect behavior and will be lost if the code is
-// regenerated.
-// </auto-generated>
-
-namespace Microsoft.Azure.CognitiveServices.Language.LUIS.Programmatic.Models
-{
-    using Newtonsoft.Json;
-    using System.Linq;
-
-    public partial class PrebuiltDomainModel
-    {
-        /// <summary>
-        /// Initializes a new instance of the PrebuiltDomainModel class.
-        /// </summary>
-        public PrebuiltDomainModel()
-        {
-            CustomInit();
-        }
-
-        /// <summary>
-        /// Initializes a new instance of the PrebuiltDomainModel class.
-        /// </summary>
-        public PrebuiltDomainModel(string name = default(string), string description = default(string), string examples = default(string))
-        {
-            Name = name;
-            Description = description;
-            Examples = examples;
-            CustomInit();
-        }
-
-        /// <summary>
-        /// An initialization method that performs custom operations like setting defaults
-        /// </summary>
-        partial void CustomInit();
-
-        /// <summary>
-        /// </summary>
-        [JsonProperty(PropertyName = "name")]
-        public string Name { get; set; }
-
-        /// <summary>
-        /// </summary>
-        [JsonProperty(PropertyName = "description")]
-        public string Description { get; set; }
-
-        /// <summary>
-        /// </summary>
-        [JsonProperty(PropertyName = "examples")]
-        public string Examples { get; set; }
-
-    }
-}
